package it.appmessaggi;

import java.io.BufferedReader;
import java.io.IOException;
import java.io.InputStreamReader;
import java.io.PrintWriter;
import java.net.InetAddress;
import java.net.ServerSocket;
import java.net.Socket;
import java.net.UnknownHostException;
import java.util.Collections;
import java.util.HashMap;
import java.util.HashSet;
import java.util.Map;
import java.util.Scanner;
import java.util.Set;

public class ChatServer {
    private Scanner scanner = new Scanner(System.in);
    private static Set<PrintWriter> clientWriters = Collections.synchronizedSet(new HashSet<>());
    private static Set<Socket> clientSockets = Collections.synchronizedSet(new HashSet<>());
    private int PORT = 0;
    private ServerSocket serverSocket;
    private volatile boolean running = true; 
    private static Map<String, PrintWriter> corrispondenze = Collections.synchronizedMap(new HashMap<>());

    public static Map<String, PrintWriter> getCorrispondenze() {
        return corrispondenze;
    }

    public ChatServer(){
        try {
            System.out.print("\nInserisci una porta: ");
            PORT = scanner.nextInt();
            scanner.nextLine(); 
        } catch (Exception e) {
            System.out.println("Numero porta invalido!");
            System.exit(1);
        }

        try {
            InetAddress ip = InetAddress.getLocalHost();
            System.out.println("Il tuo indirizzo IP locale è: " + ip.getHostAddress());
        } catch (UnknownHostException e) {
            System.err.println("Impossibile trovare l'indirizzo IP: " + e.getMessage());
        }

        System.out.println("Il Server della chat è avviato sulla porta " + PORT + "...");
        System.out.println("Scrivi '/stop' in qualsiasi momento per spegnere il server.");
        
        Thread comandoThread = new Thread(new GestoreComandiServer());
        comandoThread.setDaemon(true); 
        comandoThread.start();

        try {
            serverSocket = new ServerSocket(PORT);
            while (running) {
                Socket clientSocket = serverSocket.accept();
                if (!running) break;
                
                System.out.println("Nuovo utente connesso: " + clientSocket.getRemoteSocketAddress());
                clientSockets.add(clientSocket);
                
                new Thread(new ClientHandler(clientSocket)).start();
            }
        } catch (IOException e) {
            if (running) {
                e.printStackTrace();
            } else {
                System.out.println("ServerSocket chiuso correttamente.");
            }
        }
    }

    public static void main(String[] args) {
        new ChatServer();
    }
    
    public static void broadcast(String message) {
        synchronized (clientWriters) {
            for (PrintWriter writer : clientWriters) {
                writer.println(message);
            }
        }
    }

    private class GestoreComandiServer implements Runnable {
        @Override
        public void run() {
            while (running) {
                String comando = scanner.nextLine();
                if (comando.equalsIgnoreCase("/stop")) {
                    spegniServer();
                    break;
                }
            }
        }
    }

    private void spegniServer() {
        System.out.println("Spegnimento del server in corso...");
        running = false;
        broadcast("IL SERVER STA PER ESSERE CHIUSO.");

        synchronized (clientSockets) {
            for (Socket s : clientSockets) {
                try {
                    if (!s.isClosed()) s.close();
                } catch (IOException e) {
                    //
                }
            }
        }

        try {
            if (serverSocket != null && !serverSocket.isClosed()) {
                serverSocket.close();
            }
        } catch (IOException e) {
            System.err.println("Errore durante la chiusura del ServerSocket: " + e.getMessage());
        }

        System.out.println("Server spento con successo. Arrivederci!");
        System.exit(0);
    }

    private static class ClientHandler implements Runnable {
        private Socket socket;
        private PrintWriter out;
        private BufferedReader in;
        private String username;
        
        public ClientHandler(Socket socket) {
            this.socket = socket;
        }

        @Override
        public void run() {
            try {
                in = new BufferedReader(new InputStreamReader(socket.getInputStream()));
                out = new PrintWriter(socket.getOutputStream(), true);

                clientWriters.add(out);

                username = in.readLine();
                if (username != null) {
                    corrispondenze.put(username, out);
                    broadcast(username + " si è unito alla chat!");
                }

                String message;
                while ((message = in.readLine()) != null) {
                    if (message.equalsIgnoreCase("/quit")) {
                        break;
                    }

                    if (message.startsWith("/privato:")) {
                        String[] parti = message.split(":", 6); 
                        
                        if (parti.length == 6) {
                            broadcast(message);
                        } else {
                            System.out.println("Errore: Pacchetto /privato malformato ricevuto da " + username);
                        } 
                    } else {
                        broadcast("[" + username + "] : " + message);
                    }
                }
            } catch (IOException e) {
                System.out.println("Connessione interrotta con " + username);
            } finally {
                if (out != null) clientWriters.remove(out);
                clientSockets.remove(socket);
                if (username != null){ 
                    corrispondenze.remove(username);
                    broadcast(username + " ha lasciato la chat.");
                }
                try {
                    socket.close();
                } catch (IOException e) {
                    e.printStackTrace();
                }
            }
        }
    }
}